[gd_scene load_steps=19 format=3 uid="uid://7xefsikrycob"]

[ext_resource type="Script" uid="uid://c8cblrve0vnf2" path="res://Scenes/Hub/overworld.gd" id="1_4wr4y"]
[ext_resource type="AudioStream" uid="uid://1gs0ygkt6a71" path="res://Assets/Audio/Music/main_menu.wav" id="2_f6am2"]
[ext_resource type="PackedScene" uid="uid://b3xnahgbyyf0j" path="res://Scenes/Hub/globe.tscn" id="3_i8gr5"]
[ext_resource type="Shader" uid="uid://clbev63itecol" path="res://Scenes/Hub/snow.gdshader" id="3_yvx84"]
[ext_resource type="PackedScene" uid="uid://ba331tej7sswa" path="res://Scenes/Levels/Level_2/Level_Two.tscn" id="4_hf0oe"]
[ext_resource type="PackedScene" uid="uid://yowo6jwf5wvd" path="res://Entities/Player/Player.tscn" id="4_s368d"]
[ext_resource type="PackedScene" uid="uid://bxhcxil1fa8hi" path="res://Scenes/Levels/Level_3/Level_Three.tscn" id="5_2ngsa"]
[ext_resource type="PackedScene" uid="uid://cmco374svbi3e" path="res://Scenes/Levels/Level_4/Level_Four.tscn" id="6_auytq"]
[ext_resource type="PackedScene" uid="uid://c04sllgueisy5" path="res://Entities/shelf.tscn" id="8_2ngsa"]
[ext_resource type="Shader" uid="uid://2jdtapac2i6e" path="res://Scenes/Hub/RippleEffect.gdshader" id="9_1hqoh"]
[ext_resource type="PackedScene" uid="uid://cnm5m75aadmkh" path="res://Menus/Title/title.tscn" id="9_f6am2"]
[ext_resource type="PackedScene" uid="uid://cfuyy2yu6j6lp" path="res://Menus/Pause UI/Pause_ui.tscn" id="12_yrf1l"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yrf1l"]
shader = ExtResource("3_yvx84")
shader_parameter/rain_amount = 100.0
shader_parameter/near_rain_length = 0.01
shader_parameter/far_rain_length = 0.01
shader_parameter/near_rain_width = 1.0
shader_parameter/far_rain_width = 0.5
shader_parameter/near_rain_transparency = 1.0
shader_parameter/far_rain_transparency = 0.5
shader_parameter/rain_color = Color(0.914063, 0.910492, 0.910492, 1)
shader_parameter/base_rain_speed = 0.15
shader_parameter/additional_rain_speed = 0.2
shader_parameter/slant = 4.75e-08

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yvx84"]
shader = ExtResource("9_1hqoh")
shader_parameter/wave_count = 20.0
shader_parameter/speed = 6.3
shader_parameter/height = 0.021

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f6am2"]
size = Vector2(28030, 3181)

[sub_resource type="Animation" id="Animation_1hqoh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.05, 0.05)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/Title2:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_f6am2"]
resource_name = "start"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.05, 0.05), Vector2(0.2, 0.2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/Title2:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(4, 4)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yvx84"]
_data = {
&"RESET": SubResource("Animation_1hqoh"),
&"start": SubResource("Animation_f6am2")
}

[node name="Overworld" type="Node2D" node_paths=PackedStringArray("globes")]
script = ExtResource("1_4wr4y")
music = ExtResource("2_f6am2")
globes = [NodePath("Stuff/Layout/Levels/Globe"), NodePath("Stuff/Layout/Levels/Globe2"), NodePath("Stuff/Layout/Levels/Globe3"), NodePath("Stuff/Layout/Levels/Globe4")]

[node name="Background" type="CanvasLayer" parent="."]
layer = -1

[node name="Wall" type="ColorRect" parent="Background"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.292236, 0.311081, 0.59375, 1)

[node name="WindowSill" type="ColorRect" parent="Background"]
self_modulate = Color(0, 0, 0, 0.588235)
offset_right = 234.0
offset_bottom = 421.0

[node name="Window1" type="ColorRect" parent="Background/WindowSill"]
material = SubResource("ShaderMaterial_yrf1l")
layout_mode = 1
offset_right = 211.0
offset_bottom = 398.0
color = Color(0.179688, 0.179688, 0.179688, 1)

[node name="WindowSill2" type="ColorRect" parent="Background"]
self_modulate = Color(0, 0, 0, 0.588235)
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -234.0
offset_bottom = 421.0
grow_horizontal = 0

[node name="Window1" type="ColorRect" parent="Background/WindowSill2"]
material = SubResource("ShaderMaterial_yrf1l")
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -211.0
offset_bottom = 398.0
grow_horizontal = 0
color = Color(0.179688, 0.179688, 0.179688, 1)

[node name="Stuff" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="Decorative" type="Node2D" parent="Stuff"]

[node name="Node2D2" type="Node2D" parent="Stuff/Decorative"]
position = Vector2(0, 6560)
metadata/_edit_group_ = true

[node name="Shelf" parent="Stuff/Decorative/Node2D2" instance=ExtResource("8_2ngsa")]
collision_layer = 0
collision_mask = 0

[node name="Levels" type="Node2D" parent="Stuff/Decorative/Node2D2"]

[node name="Globe" parent="Stuff/Decorative/Node2D2/Levels" instance=ExtResource("3_i8gr5")]
position = Vector2(-4334, -1411)
level_scene = null

[node name="Globe2" parent="Stuff/Decorative/Node2D2/Levels" instance=ExtResource("3_i8gr5")]
position = Vector2(-1491, -1415)
level = 1
level_scene = null

[node name="Globe3" parent="Stuff/Decorative/Node2D2/Levels" instance=ExtResource("3_i8gr5")]
position = Vector2(1413, -1426)
level = 2
level_scene = null

[node name="Globe4" parent="Stuff/Decorative/Node2D2/Levels" instance=ExtResource("3_i8gr5")]
position = Vector2(4259, -1426)
level = 3
level_scene = null

[node name="Node2D3" type="Node2D" parent="Stuff/Decorative"]
position = Vector2(0, -4374)
metadata/_edit_group_ = true

[node name="Shelf" parent="Stuff/Decorative/Node2D3" instance=ExtResource("8_2ngsa")]
collision_layer = 0
collision_mask = 0

[node name="Levels" type="Node2D" parent="Stuff/Decorative/Node2D3"]

[node name="Globe" parent="Stuff/Decorative/Node2D3/Levels" instance=ExtResource("3_i8gr5")]
position = Vector2(-4334, -1411)
level_scene = null

[node name="Globe2" parent="Stuff/Decorative/Node2D3/Levels" instance=ExtResource("3_i8gr5")]
position = Vector2(-1491, -1415)
level = 1
level_scene = null

[node name="Globe3" parent="Stuff/Decorative/Node2D3/Levels" instance=ExtResource("3_i8gr5")]
position = Vector2(1413, -1426)
level = 2
level_scene = null

[node name="Globe4" parent="Stuff/Decorative/Node2D3/Levels" instance=ExtResource("3_i8gr5")]
position = Vector2(4259, -1426)
level = 3
level_scene = null

[node name="PlayerSpawn" type="Marker2D" parent="Stuff"]
position = Vector2(0, -8056)

[node name="Player" parent="Stuff/PlayerSpawn" instance=ExtResource("4_s368d")]

[node name="Shaders" type="Node2D" parent="Stuff/PlayerSpawn"]
position = Vector2(0, 8056)

[node name="Ripple effect" type="ColorRect" parent="Stuff/PlayerSpawn/Shaders"]
material = SubResource("ShaderMaterial_yvx84")
offset_left = -5414.0
offset_top = -1511.0
offset_right = -3224.0
offset_bottom = 626.0
color = Color(1, 1, 1, 0)

[node name="Ripple effect6" type="ColorRect" parent="Stuff/PlayerSpawn/Shaders"]
material = SubResource("ShaderMaterial_yvx84")
offset_left = -2582.0
offset_top = -1511.0
offset_right = -392.0
offset_bottom = 626.0
color = Color(1, 1, 1, 0)

[node name="Ripple effect7" type="ColorRect" parent="Stuff/PlayerSpawn/Shaders"]
material = SubResource("ShaderMaterial_yvx84")
offset_left = 324.0
offset_top = -1511.0
offset_right = 2514.0
offset_bottom = 626.0
color = Color(1, 1, 1, 0)

[node name="Ripple effect8" type="ColorRect" parent="Stuff/PlayerSpawn/Shaders"]
material = SubResource("ShaderMaterial_yvx84")
offset_left = 3150.0
offset_top = -1511.0
offset_right = 5340.0
offset_bottom = 626.0
color = Color(1, 1, 1, 0)

[node name="Ripple effect2" type="ColorRect" parent="Stuff/PlayerSpawn/Shaders"]
material = SubResource("ShaderMaterial_yvx84")
offset_left = -5447.0
offset_top = -6882.0
offset_right = -3257.0
offset_bottom = -4745.0
color = Color(1, 1, 1, 0)

[node name="Ripple effect9" type="ColorRect" parent="Stuff/PlayerSpawn/Shaders"]
material = SubResource("ShaderMaterial_yvx84")
offset_left = -2574.0
offset_top = -6896.0
offset_right = -384.0
offset_bottom = -4759.0
color = Color(1, 1, 1, 0)

[node name="Ripple effect10" type="ColorRect" parent="Stuff/PlayerSpawn/Shaders"]
material = SubResource("ShaderMaterial_yvx84")
offset_left = 337.0
offset_top = -6896.0
offset_right = 2527.0
offset_bottom = -4759.0
color = Color(1, 1, 1, 0)

[node name="Ripple effect11" type="ColorRect" parent="Stuff/PlayerSpawn/Shaders"]
material = SubResource("ShaderMaterial_yvx84")
offset_left = 3163.0
offset_top = -6896.0
offset_right = 5353.0
offset_bottom = -4759.0
color = Color(1, 1, 1, 0)

[node name="Ripple effect3" type="ColorRect" parent="Stuff/PlayerSpawn/Shaders"]
material = SubResource("ShaderMaterial_yvx84")
offset_left = -2609.0
offset_top = 4007.0
offset_right = -419.0
offset_bottom = 6144.0
color = Color(1, 1, 1, 0)

[node name="Ripple effect4" type="ColorRect" parent="Stuff/PlayerSpawn/Shaders"]
material = SubResource("ShaderMaterial_yvx84")
offset_left = 331.0
offset_top = 4007.0
offset_right = 2521.0
offset_bottom = 6144.0
color = Color(1, 1, 1, 0)

[node name="Ripple effect5" type="ColorRect" parent="Stuff/PlayerSpawn/Shaders"]
material = SubResource("ShaderMaterial_yvx84")
offset_left = 3170.0
offset_top = 4007.0
offset_right = 5360.0
offset_bottom = 6144.0
color = Color(1, 1, 1, 0)

[node name="Layout" type="Node2D" parent="Stuff"]
position = Vector2(0, 1020)
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="Shelf" parent="Stuff/Layout" instance=ExtResource("8_2ngsa")]

[node name="Levels" type="Node2D" parent="Stuff/Layout"]

[node name="Globe" parent="Stuff/Layout/Levels" instance=ExtResource("3_i8gr5")]
position = Vector2(-4334, -1411)

[node name="Globe2" parent="Stuff/Layout/Levels" instance=ExtResource("3_i8gr5")]
position = Vector2(-1491, -1415)
level = 1
level_scene = ExtResource("4_hf0oe")

[node name="Globe3" parent="Stuff/Layout/Levels" instance=ExtResource("3_i8gr5")]
position = Vector2(1413, -1426)
level = 2
level_scene = ExtResource("5_2ngsa")

[node name="Globe4" parent="Stuff/Layout/Levels" instance=ExtResource("3_i8gr5")]
position = Vector2(4259, -1426)
level = 3
level_scene = ExtResource("6_auytq")

[node name="BottomArea" type="Area2D" parent="Stuff"]
position = Vector2(0, 9608)
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Stuff/BottomArea"]
position = Vector2(17, 805)
shape = SubResource("RectangleShape2D_f6am2")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.05, 0.05)
position_smoothing_enabled = true
metadata/_edit_lock_ = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Title2" parent="CanvasLayer" instance=ExtResource("9_f6am2")]
pivot_offset = Vector2(640, 360)
metadata/_edit_lock_ = true

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="Pause_UI" parent="CanvasLayer2" instance=ExtResource("12_yrf1l")]
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_yvx84")
}

[connection signal="body_entered" from="Stuff/BottomArea" to="." method="_on_bottom_area_body_entered"]
